Fix wrong colour override for text link

--- a/Source/Theme.scss
+++ b/Source/Theme.scss
@@ -29,7 +29,7 @@
     --color-notifications-button-hover-bg: transparent !important;
     --color-current-user-tip-border: #{$BorderColor-1} !important;
     --color-text-link: #{$LinkColor} !important;
-    --color-fg-default: #{$LinkColor} !important;
+    --color-fg-default: #{$PrimaryText} !important;
     --color-canvas-default: #{$BackgroundColor-3} !important;
     --color-canvas-subtle: #{$BackgroundColor-3} !important;
     --color-canvas-inset: #{$BackgroundColor-3} !important;
